refactoring to hooks

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
     sans-serif;
   background-color: #e7ecf2;
   color: #122236;
-  min-height: 100vh;
+  min-height: 100%;
   font-style: normal;
 }
 
